syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = ".;proto";


service Inventory {
  // 设置库存
  rpc SetInv(GoodsInvInfo) returns(google.protobuf.Empty);
  // 获取库存信息
  rpc InvDetail(GoodsInvInfo) returns (GoodsInvInfo);
  // 库存预扣减
  rpc Sell(SellInfo) returns (google.protobuf.Empty);
  // 库存归还
  rpc Reback(SellInfo) returns(google.protobuf.Empty);
}

message GoodsInvInfo {
  int32 goodsId = 1;
  int32 num = 2;
}

message SellInfo {
  repeated GoodsInvInfo goodsInfo = 1;
  string orderSn = 2;
}